--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <a href="/" lang="en">WebStudio</a>
         <nav>
             <ul>
-            <li><a href=""></a>Студия</li>
-            <li><a href=""></a>Портфолио</li>
-            <li><a href=""></a>Контакты</li>
+            <li><a href="./index.html">Студия</a></li>
+            <li><a href="./portfolio.html">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
             </ul>
         </nav>
         <ul>
