--- a/index.html
+++ b/index.html
@@ -11,95 +11,98 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <a href="/" lang="en">WebStudio</a>
-        <nav>
-            <ul>
-            <li><a href="./index.html">Студия</a></li>
-            <li><a href="./portfolio.html">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+<!-- header -->
+    <header class="header">
+        <a href="/" lang="en" class="header-logo link">Web<span class="header-logo-studio">Studio</span></a>
+        <nav class="header-navigation">
+            <ul class="header-list list">
+            <li><a href="./index.html" class="header-link link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
+            <li><a href="" class="header-link link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-        <li><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-contacts list">
+        <li><a href="mailto:info@devstudio.com" lang="en" class="header-mail link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="header-phone link">+38 096 111 11 11</a></li>
         </ul>
     </header>
-    <main>
+<!-- main -->
+    <main class="main">
     <!-- герой -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
     <!-- переваги компанії -->
         <section>
             <!-- <h2>преимущества вебстудии</h2> -->
-            <ul>
+            <ul class="advantage-list list">
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.                        
+                    <h3 class="advantage-title">Внимание к деталям</h3>
+                    <p class="advantage-text">Идейные соображения, а также начало повседневной работы по формированию позиции.                        
                     </p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                    <h3 class="advantage-title">Пунктуальность</h3>
+                    <p class="advantage-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.
+                    <h3 class="advantage-title">Планирование</h3>
+                    <p class="advantage-text">Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                    <h3 class="advantage-title">Современные технологии</h3>
+                    <p class="advantage-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
         </section>
     <!-- напрямок діяльнності -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./images/img1.jpg" alt="людина набирає текст" width="370" height="294"></li>
-                <li><img src="./images/img2.jpg" alt="людина дивиться в телефон" width="370" height="294"></li>
-                <li><img src="./images/img3.jpg" alt="різнокольорове зображення на планшеті" width="370" height="294"></li>
+        <section class="activity">
+            <h2 class="activity-title">Чем мы занимаемся</h2>
+            <ul class="activity-list list">
+                <li class="activity-item"><img src="./images/img1.jpg" alt="людина набирає текст" width="370" height="294" class="activity-photo"></li>
+                <li class="activity-item"><img src="./images/img2.jpg" alt="людина дивиться в телефон" width="370" height="294" class="activity-photo"></li>
+                <li class="activity-item"><img src="./images/img3.jpg" alt="різнокольорове зображення на планшеті" width="370" height="294" class="activity-photo"></li>
             </ul>
         </section>
     <!-- робітники -->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/worker1.jpg" alt="чоловік посміхається" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+        <section class="team">
+            <h2 class="team-title">Наша команда</h2>
+            <ul class="team-list list">
+                <li class="team-item">
+                    <img src="./images/worker1.jpg" alt="чоловік посміхається" width="270" height="260" class="team-photo">
+                    <h3 class="worker-name">Игорь Демьяненко</h3>
+                    <p lang="en" class="worker-position">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/worker2.jpg" alt="жінка посміхається" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                <li class="team-item">
+                    <img src="./images/worker2.jpg" alt="жінка посміхається" width="270" height="260" class="team-photo">
+                    <h3 class="worker-name">Ольга Репина</h3>
+                    <p lang="en" class="worker-position">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/worker3.jpg" alt="чоловік посміхається" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Николай Тарасов</p>
+                <li class="team-item">
+                    <img src="./images/worker3.jpg" alt="чоловік посміхається" width="270" height="260" class="team-photo">
+                    <h3 class="worker-name">Николай Тарасов</h3>
+                    <p lang="en" class="worker-position">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/worker4.jpg" alt="чоловік посміхається" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                <li class="team-item">
+                    <img src="./images/worker4.jpg" alt="чоловік посміхається" width="270" height="260" class="team-photo">
+                    <h3 class="worker-name">Михаил Ермаков</h3>
+                    <p lang="en" class="worker-position">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="/" lang="en">WebStudio</a>
-        <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/uDfenWfbyUof8Sh59" target="_blank" rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" lang="en">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+<!-- footer -->
+    <footer class="footer">
+        <a href="/" lang="en" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
+        <address class="footer-address">
+            <ul class="footer-list list">
+                <li class="footer-item"><a href="https://goo.gl/maps/uDfenWfbyUof8Sh59" target="_blank" rel="noopener noreferrer nofollow" class="footer-address-link link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="footer-item"><a href="mailto:info@example.com" lang="en" class="footer-link link">info@example.com</a></li>
+                <li class="footer-item"><a href="tel:+380991111111" class="footer-link link">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
