--- a/portfolio.html
+++ b/portfolio.html
@@ -11,86 +11,86 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <a href="/" lang="en">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <header class="header">
+        <a href="/" lang="en" class="header-logo link">Web<span class="header-logo-studio">Studio</span></a>
+        <nav class="header-navigation">
+            <ul class="header-list list">
+                <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
+                <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a></li>
+                <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
             </ul>
         </nav>
-            <ul>
-                <li><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="header-contacts list">
+                <li><a href="mailto:info@devstudio.com" lang="en" class="header-mail link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="header-phone link">+38 096 111 11 11</a></li>
             </ul>
     </header>
-    <main>
-        <section>
-            <!-- <h1>Примеры портфолио</h1> -->
-            <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+    <main class="main">
+        <!-- <h1>Примеры портфолио</h1> -->
+        <div class="filter">
+            <ul class="filter-btn-list list">
+                <li class="filter-btn-item"><button type="button" class="filter-btn">Все</button></li>
+                <li class="filter-btn-item"><button type="button" class="filter-btn">Веб-сайты</button></li>
+                <li class="filter-btn-item"><button type="button" class="filter-btn">Приложения</button></li>
+                <li class="filter-btn-item"><button type="button" class="filter-btn">Дизайн</button></li>
+                <li class="filter-btn-item"><button type="button" class="filter-btn">Маркетинг</button></li>
             </ul>
-            <ul>
-                <li>
-                    <img src="./images/port1.jpg" alt="a computer" width="300">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+        </div>
+            <ul class="portfolio-example-list list">
+                <li class="portfolio-item">
+                    <img src="./images/port1.jpg" alt="a computer" width="300" class="portfolio-photo">
+                    <h2 class="portfolio-title">Технокряк</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="./images/port2.jpg" alt="a basketball player" width="300">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                <li class="portfolio-item">
+                    <img src="./images/port2.jpg" alt="a basketball player" width="300" class="portfolio-photo">
+                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
-                <li>
-                    <img src="./images/port3.jpg" alt="fish" width="300">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                <li class="portfolio-item">
+                    <img src="./images/port3.jpg" alt="fish" width="300" class="portfolio-photo">
+                    <h2 class="portfolio-title">Ресторан Seafood</h2>
+                    <p class="portfolio-text">Приложение</p>
                 </li>
-                <li>
-                    <img src="./images/port4.jpg" alt="a headset" width="300">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                <li class="portfolio-item">
+                    <img src="./images/port4.jpg" alt="a headset" width="300" class="portfolio-photo">
+                    <h2 class="portfolio-title">Проект Prime</h2>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="./images/port5.jpg" alt="boxes" width="300">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                <li class="portfolio-item">
+                    <img src="./images/port5.jpg" alt="boxes" width="300" class="portfolio-photo">
+                    <h2 class="portfolio-title">Проект Boxes</h2>
+                    <p class="portfolio-text">Приложение</p>
                 </li>
-                <li>
-                    <img src="./images/port6.jpg" alt="a screen" width="300">
-                    <h2 lang="en">Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                <li class="portfolio-item">
+                    <img src="./images/port6.jpg" alt="a screen" width="300" class="portfolio-photo">
+                    <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="./images/port7.jpg" alt="a book" width="300">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                <li class="portfolio-item">
+                    <img src="./images/port7.jpg" alt="a book" width="300" class="portfolio-photo">
+                    <h2 class="portfolio-title">Издание Limited Edition</h2>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
-                <li>
-                    <img src="./images/port8.jpg" alt="a tag" width="300">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                <li class="portfolio-item">
+                    <img src="./images/port8.jpg" alt="a tag" width="300" class="portfolio-photo">
+                    <h2 class="portfolio-title">Проект LAB</h2>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="./images/port9.jpg" alt="someone is typing" width="300">
-                    <h2 lang="en">Growing Business</h2>
-                    <p>Приложение</p>
+                <li class="portfolio-item">
+                    <img src="./images/port9.jpg" alt="someone is typing" width="300" class="portfolio-photo">
+                    <h2 lang="en" class="portfolio-title">Growing Business</h2>
+                    <p class="portfolio-text">Приложение</p>
                 </li>
-            </ul>
-        </section>
+            </ul>  
     </main>
-    <footer>
-        <a href="/" lang="en">WebStudio</a>
-        <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/uDfenWfbyUof8Sh59" target="_blank" rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" lang="en">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+    <footer class="footer">
+        <a href="/" lang="en" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
+        <address class="footer-address">
+            <ul class="footer-list list">
+                <li class="footer-item"><a href="https://goo.gl/maps/uDfenWfbyUof8Sh59" target="_blank" rel="noopener noreferrer nofollow" class="footer-address-link link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="footer-item"><a href="mailto:info@example.com" lang="en" class="footer-link link">info@example.com</a></li>
+                <li class="footer-item"><a href="tel:+380991111111" class="footer-link link">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
