--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <!-- header -->
     <header class="header">
-        <a href="/" lang="en" class="header-logo link">Web<span class="header-logo-studio">Studio</span></a>
+        <a href="./index.html" lang="en" class="header-logo link">Web<span class="header-logo-studio">Studio</span></a>
         <nav class="header-navigation">
             <ul class="header-list list">
             <li><a href="./index.html" class="header-link link current">Студия</a></li>
@@ -97,7 +97,7 @@
     </main>
 <!-- footer -->
     <footer class="footer">
-        <a href="/" lang="en" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
+        <a href="./index.html" lang="en" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
         <address class="footer-address">
             <ul class="footer-list list">
                 <li class="footer-item"><a href="https://goo.gl/maps/uDfenWfbyUof8Sh59" target="_blank" rel="noopener noreferrer nofollow" class="footer-address-link link">г. Киев, пр-т Леси Украинки, 26</a></li>
