--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" lang="en" class="header-logo link">Web<span class="header-logo-studio">Studio</span></a>
+        <a href="./index.html" lang="en" class="header-logo link">Web<span class="header-logo-studio">Studio</span></a>
         <nav class="header-navigation">
             <ul class="header-list list">
                 <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
@@ -85,7 +85,7 @@
             </ul>  
     </main>
     <footer class="footer">
-        <a href="/" lang="en" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
+        <a href="./index.html" lang="en" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
         <address class="footer-address">
             <ul class="footer-list list">
                 <li class="footer-item"><a href="https://goo.gl/maps/uDfenWfbyUof8Sh59" target="_blank" rel="noopener noreferrer nofollow" class="footer-address-link link">г. Киев, пр-т Леси Украинки, 26</a></li>
