--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
             </ul>
     </header>
     <main class="main">
-        <!-- <h1>Примеры портфолио</h1> -->
-        <div class="filter">
+        <section>
+            <!-- <h1>Примеры портфолио</h1> --> 
             <ul class="filter-btn-list list">
                 <li class="filter-btn-item"><button type="button" class="filter-btn">Все</button></li>
                 <li class="filter-btn-item"><button type="button" class="filter-btn">Веб-сайты</button></li>
@@ -35,7 +35,6 @@
                 <li class="filter-btn-item"><button type="button" class="filter-btn">Дизайн</button></li>
                 <li class="filter-btn-item"><button type="button" class="filter-btn">Маркетинг</button></li>
             </ul>
-        </div>
             <ul class="portfolio-example-list list">
                 <li class="portfolio-item">
                     <img src="./images/port1.jpg" alt="a computer" width="300" class="portfolio-photo">
@@ -82,7 +81,8 @@
                     <h2 lang="en" class="portfolio-title">Growing Business</h2>
                     <p class="portfolio-text">Приложение</p>
                 </li>
-            </ul>  
+            </ul>
+        </section> 
     </main>
     <footer class="footer">
         <a href="./index.html" lang="en" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
